crates/aven-check/tests/fixtures/check/valid/pick-infers-row.av
User = { name: Text, email: Text, age: Int }
u : User = { name: "Ada", email: "ada@x.dev", age: 37 }

n : { name: Text } = pick(u, @{"name"})
contact : { name: Text, email: Text } = pick(u, @{"name", "email"})
without_email : { name: Text, age: Int } = omit(u, @{"email"})

picked_email = pick(u, @{"email"})
e : { email: Text } = picked_email
