crates/aven-check/tests/fixtures/check/invalid/local-spread-merge-mismatch.av
main = () =>
  merge = (a, b) => { ..a, ..b }
  u : { name: Text } = { name: "Ada" }
  m : { age: Int } = { age: 3 }
  both = merge(u, m)
  bad : Text = both.age
  both
